# phone2app

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
configs/: appium.yaml  devices.yaml  scenarios.yaml  thresholds.yaml
phone2app/: __init__.py  adb.py  appium_runner.py  cli.py  config.py  logs.py  perfetto.py  reporting.py  runner.py  uiauto.py
scripts/: setup_appium.ps1
tests/: test_appium_ext.py  test_parsers.py  test_reporting.py  test_runner_status.py  test_uiauto.py
tools/: apply_final_wrong_union_review_decisions.py  apply_final_wrong_union_v7_decisions.py  audit_external_bbm_50_results.py  audit_main_dialogue_300_human_understandability.py  audit_main_dialogue_300_v21_answerability.py  audit_main_dialogue_300_v21_executability.py  audit_response_capture_completeness.py  build_ceval_abcd_50.py  build_external_wrong_50.py  build_final_wrong_union_analysis_report.py  build_final_wrong_union_v10_scored_scope.py  build_final_wrong_union_v12_showcase.py  build_final_wrong_union_v13_pure_showcase.py  build_final_wrong_union_v14_report_showcase.py  build_final_wrong_union_v15_report_showcase.py  build_final_wrong_union_v16_report_showcase.py  build_final_wrong_union_v17_report_showcase.py  build_final_wrong_union_v18_report_showcase.py  build_final_wrong_union_v9_with_scope.py  build_final_wrong_union_with_ceval.py  build_main_dialogue_300_v2.py  build_main_dialogue_300_v22.py  build_main_dialogue_300_v3.py  build_main_dialogue_300_v31.py  build_main_dialogue_300_v32.py  build_main_dialogue_350.py  build_main_dialogue_smoke_16.py  (+29 more)
(+46 files in other folders)
